Version Fonctionnelle : possibilité d'exproter en .jar